[package]
authors = [
    "Tushar G Hombal <tusharh75@gmail.com>"
]
categories = ["gui", "wasm", "web-programming"]
description = "Makes use of the yew-wasm-pack-minimal template to generate a starter project that helps build chrome extensions with Yew."
keywords = ["yew", "wasm", "wasm-bindgen", "web", "wasm pack", "chrome-extension-with-rust"]
name = "{{crate_name}}"
edition = "2021"
readme = "README.md"
version = "0.1.0"


[dependencies]
wasm-bindgen = "0.2.89"
yew = { version="0.21.0", features=["csr"] }
